# Typr.GUI

./: README.md  pyproject.toml
TGB_Git/IA - Typing go burrr/Application_Desktop/Kivy_Version_Dev/: main.py  tgb.kv
TGB_Git/IA - Typing go burrr/Application_Desktop/Tkinter Version/: keystrokerec.py  main.py  wpm_alg.py
TGB_Git/IA - Typing go burrr/CLI_Init_Dev/: Typing_Go_Burr_CLI.py
TGB_Git/IA - Typing go burrr/CLI_Init_Dev/CLI_WITH_MENU/: TypingGoBurrr.py
TGB_Git/Kivy - practice/: main.py  my.kv
TyprCLI/: Typing_Go_Burr_CLI.py  main.py  typr.py
TyprFlt/Typr/: HowToStart.md  HowToStart.txt  main.py  stdfunc.py  views.py
TyprFlt/Typr/assets/: manifest.json
TyprFlt/Typr/pages/: home.py  login.py  main.py  old_typing.py  signup.py  typingtest.py
TyprGUI/: TyprTODO.md  main.py  on_screen_KBD.py
TyprSL/: Home Page.py  backend.py  config.toml  homepage.py
TyprSL/pages/: Introduction.py  Typing Test.py  signup.py
V1.0.0/TypingGoBurrr_CLI/Source Code/: Typing_Go_Burr_CLI.py  main.py
src/TyprFlt/Typr/: .gitignore  README.md  data.pkl  home.py  main.py  views.py
src/TyprFlt/Typr/WordLists/: Home_Row_Words.txt  Punctuation_Row.txt  Top_Row_Words.txt
src/TyprFlt/Typr/assets/: manifest.json
src/TyprFlt/Typr/pages/: bottomRow.py  freeTyping.py  homeRow.py  landing.py  lessons.py  login.py  numberRow.py  ottrDBM.py  profile.py  punctuation.py  signup.py  stdfunc.py  topRow.py
src/TyprGUI/: main.py
src/TyprSL/env/: pyvenv.cfg
src/WordLists/: catagorize.py
